--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
     "lodash": "^4.17.4",
+    "mathjs": "^3.18.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0"
